test/typecheck/errors/method-no-call.boa
o: output sum of int;

f := function() : bool { return true; };

if (f)
	o << 1;
